--- a/program.go.tmpl
+++ b/program.go.tmpl
@@ -1,5 +1,6 @@
 package main
 import "os"
+import "io"
 {{.Prelude}}
 
 func main() {
@@ -11,13 +12,15 @@ func main() {
 
 func run() error {
 	j := new(Node)
-	err := json.NewDecoder(os.Stdin).Decode(j)
+	var val interface{}
+	err := json.NewDecoder(os.Stdin).Decode(&val)
 	if err != nil {
 		return fmt.Errorf("unmarshal: %w", err)
 	}
+	j.val = val
 
 	{{.Program}}
 
-	fmt.Println(j)
+	fmt.Println(j.String())
 	return nil
 }
